# chiru

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  token.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/highlevel/: channels.rst  client.rst  events.rst  messages.rst  models.rst
docs/source/lowlevel/: gateway.rst  http.rst
docs/source/tutorials/: 01_basic_bot.rst
src/chiru/: bot.py  cache.py  exc.py  mentions.py  serialise.py  util.py
src/chiru/commands/: dispatcher.py  parsing.py  precondition.py
src/chiru/event/: __init__.py  chunker.py  dispatcher.py  factory.py  model.py  parser.py
src/chiru/gateway/: __init__.py  collection.py  conn.py  event.py
src/chiru/http/: __init__.py  client.py  ratelimit.py  response.py
src/chiru/models/: __init__.py  base.py  channel.py  embed.py  emoji.py  factory.py  guild.py  member.py  message.py  oauth.py  permissions.py  presence.py  role.py  user.py
tests/: test_exports.py
