[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "chiru"
version = "0.7.0"
description = "Discord client library for AnyIO"
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "chiru", from = "src"}]
license = "LGPL-3.0-or-later"
classifiers = [
    "Framework :: Trio",
    "Framework :: AnyIO",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = ">=0.25.0"
attrs = ">=23.1.0"
anyio = ">=4.0.0"
cattrs = ">=23.2.1"
arrow = ">=1.3.0"
bitarray = ">=2.8.2"
typing-extensions = {version = ">=4.8.0", python = "<3.12"}
structlog = ">=23.2.0"
stickney = ">=0.7.3"
furl = ">=2.1.3"

[tool.poetry.group.dev.dependencies]
trio = ">=0.23.0"
ruff = ">=0.1.6"
mypy = ">=1.7.1"
pyright = ">=1.1.339"
pytest = ">=7.4.3"


[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">1.3"
sphinx-autodoc-typehints = ">=1.25.2"
sphinxcontrib-jquery = ">=4.1"
sphinx-inline-tabs = ">=2023.4.21"


[tool.ruff]
target-version = "py312"
respect-gitignore = true
# fix = true
src = ["src/chiru"]
line-length = 100
show-source = true

select = [
  "RUF", 
  "F", 
  "E", 
  "W",
  "I", 
  "UP", 
  "B",  
  "YTT", 
  "ASYNC",
  "TRIO", 
  "PYI", 
  "SIM", 
  "RET",
  "PERF",
]
ignore = [
    "W291",  # SHUT THE FUCK UP WHEN I'M TYPING COMMENTS
    "W293",
]

[tool.ruff.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

local_partial_types = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
