[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "chiru"
version = "0.7.0"
description = "Discord client library for AnyIO"
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "chiru", from = "src"}]
license = "LGPL-3.0-or-later"
classifiers = [
    "Framework :: Trio",
    "Framework :: AnyIO",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.12"
httpx = ">=0.26.0"
attrs = ">=23.2.0"
anyio = ">=4.2.0"
cattrs = ">=23.2.3"
arrow = ">=1.3.0"
bitarray = ">=2.9.2"
structlog = ">=24.1.0"
stickney = ">=0.7.3"
furl = ">=2.1.3"

[tool.poetry.group.dev.dependencies]
trio = ">=0.24.0"
ruff = ">=0.1.15"
mypy = ">=1.8.0"
pyright = ">=1.1.349"
pytest = ">=8.0.0"


[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2.6"
sphinx-rtd-theme = ">=2.0.0"
sphinx-autodoc-typehints = ">=1.25.3"
sphinxcontrib-jquery = ">=4.1"
sphinx-inline-tabs = ">=2023.4.21"

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
typeCheckingMode = "strict"

reportImplicitOverride = "warning"
reportUnusedVariable = false
reportIncompatibleVariableOverride = false
reportPrivateUsage = false

[tool.ruff]
target-version = "py312"
respect-gitignore = true
# fix = true
src = ["src/chiru"]
line-length = 100
output-format = "full"

[tool.ruff.lint]
select = [
    "RUF",
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "Q",
    "YTT",
    "PYI",
    "SIM",
    "RET",
    "PERF",
    "PIE",
    "SIM",
    "C4",

    # specific docstring rules
    "D101", "D102", "D103",           # mandate docstrings
    "D201", "D204", "D211", "D419",   # less ugly docstrings
]
ignore = [
    "W291",
    "W293",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*" = ["D"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

local_partial_types = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true

disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
check_untyped_defs = true
